--- a/front/package.json
+++ b/front/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "highlight.js": "^11.10.0",
+    "monaco-editor": "^0.52.0",
+    "monaco-textmate": "^3.0.1",
+    "onigasm": "^2.2.5",
+    "path-browserify": "^1.0.1",
+    "plist": "^3.1.0",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
+    "react-monaco-editor": "^0.56.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
