--- a/front/package.json
+++ b/front/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "monaco-editor": "^0.52.0",
-    "monaco-textmate": "^3.0.1",
-    "onigasm": "^2.2.5",
+    "highlight.js": "^11.10.0",
     "path-browserify": "^1.0.1",
     "plist": "^3.1.0",
     "react": "^18.3.1",
@@ -41,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0"
   }
 }
